[package]
name = "chatsite_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.3", features = ["json"]}
reqwest = {version="0.11.13", features = ["json"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "mysql", "chrono"] }